# job-tool

./: .flake8  README.md  log.json  pyproject.toml
.github/workflows/: python-package.yml
jobtool/: __main__.py  api.py  extract_properties.py  filters.py  jobfolder.py  jobfolders.py  module.py  walker.py
src/jobtool/: __init__.py  __main__.py  format.py  jobfolder.py  status.py  walker.py  write.py
tests/: test_pytest_run.py  test_trivial.py
