[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "jobtool"
version = "0.1.0"
description = "A set of functionallities that I often need when working on Niflheim"

authors = [
    {name = "ELB",email = "elb@chem.ku.dk"}
]
license = "MIT"
readme = "README.md"

requires-python = ">=3.11"
dependencies = [
    "click",
    "colorama",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8",
    "mypy",
]