[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "jobtool"
version = "2025.2.0"
dependencies = [
  "ase",
  "click",
]
requires-python = ">=3.8"
authors = [
  {name = "ELB", email = "elb@chem.ku.dk"},
]
maintainers = [
  {name = "ELB", email = "elb@chem.ku.dk"},
]
description = "A set of functionallities that I often need when working on Niflheim"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3"
]

[project.urls]
Repository = "https://github.com/elbCHEM/job-tool"
"Bug Tracker" = "https://github.com/elbCHEM/job-tool/issues"